--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,2 @@
-typeMismatch=Please use yyyy-MM-dd'T'HH:mm:ss format
-NotNull.toDo.dueDate=Please Enter task due date
+typeMismatch=Please use yyyy-MM-dd'T'HH:mm:ss.SSS format
+NotNull.todo.dueDate=Please Enter task due date
